# RegLex

./: README.md  RegLex.cabal
src/Text/: RegLex.hs
