name:                RegLex
version:             0.1.0.0
synopsis:            Write me a state machine.
-- description:
homepage:            https://github.com/kindaro/RegLex#readme
license:             BSD3
license-file:        LICENSE
author:              Ignat Insarov
maintainer:          kindaro@gmail.com
copyright:           2017 Ignat Insarov
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.RegLex
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable RegLex-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , RegLex
  default-language:    Haskell2010

test-suite RegLex-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , RegLex
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kindaro/RegLex
